style.css
/*
 * Theme Name: portfolio
 * Author: Andreas Rånman
 * Author URI: https://andreasranman.se
 * Version: 1.0
 */

/* Mobile first font settings. 
 * based on:
 * http://typecast.com/blog/a-more-modern-scale-for-web-typography
 **/

@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&subset=latin-ext');


body {
  font-size: 100%;
}

body, caption, th, td, input, textarea, select, option, legend, fieldset, h1, h2, h3, h4, h5, h6 {
  font-size-adjust: 0.5;
}

#page {
  font-size: 1em;
  /* equivalent to 16px */
  line-height: 1.25;
  /* equivalent to 20px */
}

@media (min-width: 680px) {
  #page {
    font-size: 1em;
    /* equivalent to 16px */
    line-height: 1.375;
    /* equivalent to 22px */
  }
}

h1 {
  font-size: 2em;
  /* 2x body copy size = 32px */
  line-height: 1.25;
  /* 45px / 36px */
}

@media (min-width: 680px) {
  h1 {
    font-size: 2.5em;
    /* 2.5x body copy size = 40px */
    line-height: 1.125;
  }
}

@media (min-width: 800px) {
  h1 {
    font-size: 3em;
    /* 3x body copy size = 48px */
    line-height: 1.05;
    /* keep to a multiple of the 20px line height and something more appropriate for display headings */
  }
}

h2 {
  font-size: 1.625em;
  /* 1.625x body copy size = 26px */
  line-height: 1.15384615;
  /* 30px / 26px */
}

@media (min-width: 680px) {
  h2 {
    font-size: 2em;
    /* 2x body copy size = 32px */
    line-height: 1.25;
  }
}

@media (min-width: 800px) {
  h2 {
    font-size: 2.25em;
    /* 2.25x body copy size = 36px */
    line-height: 1.25;
  }
}

h3 {
  font-size: 1.375em;
  /* 1.375x body copy size = 22px */
  line-height: 1.13636364;
  /* 25px / 22px */
}

@media (min-width: 680px) {
  h3 {
    font-size: 1.5em;
    /* 1.5x body copy size = 24px */
    line-height: 1.25;
  }
}

@media (min-width: 800px) {
  h3 {
    font-size: 1.75em;
    /* 1.75x body copy size = 28px */
    line-height: 1.25;
  }
}

h4 {
  font-size: 1.125em;
  /* 1.125x body copy size = 18px */
  line-height: 1.11111111;
}

@media (min-width: 680px) {
  h4 {
    line-height: 1.22222222;
    /* (22px / 18px */
  }
}

blockquote {
  font-size: 1.25em;
  /* 20px / 16px */
  line-height: 1.25;
  /* 25px / 20px */
}

@media (min-width: 680px) {
  blockquote {
    font-size: 1.5em;
    /* 24px / 16px = */
    line-height: 1.45833333;
    /* 35px / 24px */
  }
}

html {
  /* Make HTML cover full page */
  height: 100%;
  width: 100%;

  /* Set standard font settings */
  font-family: 'Source Sans Pro', sans-serif;

  /* font-size: 10vmin; */
  color: DarkSlateGray;

  /* Chrome seem lazy to render so will use this background as fallback */
  background-color: dodgerblue;
}

body {
  margin: 0px;
  padding: 0px;
  /* Diagonal gradient for background image */
  /* Firefox */
  background: -moz-linear-gradient(
    bottom right, 
    darkcyan, 
    dodgerblue
  );
  /* General Syntax */
  background: linear-gradient(
    to bottom right, 
    darkcyan, 
    dodgerblue
  );
  /* Set background not to repeat, and to follow viewport */
  background-repeat: no-repeat;
  background-attachment: fixed;

  /* Added fix to solve the scrolling in Chrome on mobile */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  display: flex;
  flex: 1 0 auto;  
  flex-direction: column; 
}

li {
  list-style: none;
}

.menu {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
  color: skyblue;
  display: flex;
  text-transform: uppercase;
}

@media (orientation: landscape) {
  #top-menu .menu-item {
    margin: 1.5em;
  }
}

@media (orientation: portrait) {
  #top-menu .menu-item{
    margin: auto;
  }
}

/* Strip padding and margin from all text elements. */
h1, h2, h3, p {
  margin: 0px;
  padding: 0px;
}

/* Header */
.site-header {
  min-height: 14vh;
  display: flex;
}

@media (orientation: landscape) {
  .site-header {
    justify-content: space-between; 
  }
}

@media (orientation: portrait) {
  .site-header {
    flex-direction: column;
    justify-content: center;
  }
}

.site-branding-text {
  color: aliceblue;
  line-height: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-transform: uppercase;
  padding: 3%;
}

.site-branding-text a {
  text-decoration: none;
  color: aliceblue;
}

.navigation-top {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.navigation-top a{
  text-decoration: none;
  font-weight: bold;
  color: skyblue;
}

.navigation-top a:hover, .nav-bar a:active {
  color: aliceblue;
}

/* Front page specific */
#front-menu {
  width: 100%;
  display: flex;
  color: aliceblue;
  /* flex-direction: row; */
}

@media (orientation: landscape) {
  #front-menu {
    flex-direction: row;
  }
}

@media (orientation: portrait) {
  #front-menu {
    flex-direction: column;
  }
}

#front-menu h1 {
  font-size: 5vmin;
  text-shadow: 0.2vmin 0.2vmin 0.4vmin rgba(0, 0, 0, 0.75);
  position: absolute;
  bottom: 8%;
  left: 8%;
}

/* Add fancy line above title */
#front-menu h1::before {
  content: "_____";
  display: block;
  letter-spacing: -0.1em;
}

/* Used to be called .container, altered to fit wp */
#front-menu .menu-item {
  min-height: 74vh;
  flex: 1 1 auto;
  margin: 0px;
}

.background {
  width: 100%;
  height: 100%;
  background-position: center center;
  background-size: cover;
}

#front-menu a, #front-menu span {
  display: block;
  height: 100%;
  width: 100%;
  color: inherit;
  text-decoration: none;
  position: relative;
}

/* Footer */
.site-footer {
  min-height: 12vh;
  color: skyblue;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.footer-content {
  display: flex;
  justify-content: center;
}

.site-footer p {
  font-weight: bold;
}

/* Social Nav */
.social-navigation a {
  display: inline-block;
  text-align: center;
  margin: 0.5em;
}

/* Fix to solve the size for out icons */
.icon {
  height: 5vmin;
  width: 5vmin;
  fill: aliceblue;
}

/* Contact */
.contact-wrapper {
  margin-left: 1em;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

/* Fix to get some space between icon and content */
.contact-wrapper p span {
  margin-right: 0.5em;
  line-height: 3vmin;
}

/* Styling for actual content */
.site-content {
  background-color: #fbfbfb;
  min-height: 74vh;
}

.site-main {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  align-items: center;
  justify-content: center;
}

.site-content article {
  margin: 0px;
  width: 100%;
}

@media (min-width: 680px) {
  .site-content article {
    width: 80%;
  }
}

@media (min-width: 800px) {
  .site-content article {
    width: 60%;
  }
}

.site-content h2 {
  padding: 1em 0px;
}

.site-content h2 a {
  text-decoration: none;
  color: inherit;
}

.entry-content {
  padding: 0px 1em 1em;
}

/* Under Construction Style */
.under-construction {
  height: 74vh;
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: DarkSlateGray;
  color: floralwhite;
  text-align: center;
}

.under-construction div {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.under-construction h1 {
  font-size: 15vmin;
  text-transform: uppercase;
}

.under-construction p {
  font-size: 6vmin;
}

.screen-reader-text {
  display: none;
}

/* Handle content as I go along */

.front-page section {
  display: flex;
  width: 100%;
  flex: 1 0 auto;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* Center graphical items in posts */
figure {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  align-items: center;
  justify-content: center;

}

/* Solved videos in pages being too big. */ 
figure video {
  max-width: 100%;
}

/* Set to fixed height in order to difference in size. */
.blocks-gallery-item img {
  height: 300px;
}
  
/* Style for displaying projects */

.projects-gallery {
  display: grid;
  grid-gap: 0.5em;
  width: 100%;
  grid-template-columns: repeat(2, 1fr);
}

/* User should have these images all be same aspect ratio */
.projects-gallery img, .projects-gallery a{
  width: 100%;
  height: auto;
}

/* Style for custom grid gallery */

/* Grid gallery mobile first, display three columns. */
.grid-gallery {
  display: grid;
  overflow: hidden; /* To avoid horizontal scrollbar */
  grid-gap: 0;
  width: 100%;
  grid-template-columns: repeat(3, 1fr);
}

.grid-gallery img, .grid-gallery a {
  width: 33.33vw;
  height: 33.33vw;
  object-fit: cover;
}

@media only screen and (min-width: 600px) {

  .grid-gallery {
    width: 100%;
    grid-template-columns: repeat(4, 1fr);
  }

  .grid-gallery img, .grid-gallery a {
    width: 25vw;
    height: 25vw;
    object-fit: cover;
  }

}

@media only screen and (min-width: 800px) {

  .projects-gallery {
    grid-template-columns: repeat(4, 1fr);
  }

  .projects-gallery img, .projects-gallery a {
    width: 25vw;
    height: auto;
  }

  .grid-gallery {
    width: 100%;
    grid-template-columns: repeat(5, 1fr);
  }

  .grid-gallery img, .grid-gallery a {
    width: 20vw;
    height: 20vw;
    object-fit: cover;
  }

}

.projects {
  background-color: DarkSlateGray;
}

.showreel {
  padding: 2em 0px; /* No horizontal padding due getting horizontal scroll. */
  background-color: DarkSlateGray;
}

.entry-title {
  text-align: center;
  padding: 1em;

  color: transparent;

  background: -moz-linear-gradient(
    bottom right, 
    darkcyan, 
    dodgerblue
  );
  /* General Syntax */
  background: linear-gradient(
    to bottom right, 
    darkcyan, 
    dodgerblue
  );

  /* Set background not to repeat, and to follow viewport */
  background-repeat: no-repeat;

  /* Added fix to solve the scrolling in Chrome on mobile */
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  background-clip: text;
  -webkit-background-clip: text;

}

